[package]
name = "stuhl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_codegen = "0.4.10"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
env_logger = "0.9.0"
log = "0.4.17"
chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
